x1181 Show fixative instead of medium on label for cassette and prov
Where fixative and proviasette used to use the medium name in
the "state" field on the tiny label, now they use the fixative name.